--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@types/reactjs-localstorage": "^1.0.0"
+    "@types/reactjs-localstorage": "^1.0.0",
+    "@types/spotify-api": "^0.0.22"
   }
 }
